some fixes to intro area chart on mobile

--- a/css/intro.css
+++ b/css/intro.css
@@ -398,6 +398,17 @@ a{
   }
 }
 @media(max-width: 670px){
+  #areaChartText{
+    background: rgba(255, 255, 255, 0.65);
+    box-shadow: rgb(136, 136, 136) 4px 4px 16px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  #titleText{
+    top: 20%;
+  }
   #isPhone{
     display: block;
   }
